UPDATE get order detail API, HTML SPA

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
 "configurations": [
     {
         "name": "SPA Launch",
-        "type": "chrome",
+        "type": "msedge",
         "request": "launch",
         "preLaunchTask": "npm: start",
         "url": "http://localhost:4200",
